fixed clipping issue on first mobile nav link

--- a/src/components/Navigation/Navbar/Navbar.css
+++ b/src/components/Navigation/Navbar/Navbar.css
@@ -96,7 +96,7 @@
       opacity: 1;
       transition: all 0.5s ease;
       z-index: 2;
-      padding: 0
+      padding: 20px 0 0 0;
     }
   
     .nav-links {
